crates/flowlog-build/tests/errors/parser/placeholder_in_udf.dl
.extern fn my_udf(x: int32, y: int32) -> int32

.decl edge(a: int32, b: int32)
.decl result(a: int32)
.output result

result(A) :- edge(A, B), my_udf(A, _).
